Project picked up again. Basic comps and routing

--- a/src/app/entry-page/entry-page.component.html
+++ b/src/app/entry-page/entry-page.component.html
@@ -13,8 +13,10 @@
     </p>
     <div id = "pageJump">
     <i (mouseenter)="mouseHover($event)" 
-    data-arrow  class="material-icons">
+    data-arrow  class="material-icons"><a routerLink="/home" routerLinkActive="active">
+    
         arrow_drop_down
+    </a>
         </i>
     </div>
     </div>
