--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div id= "fullPage"style="text-align: center">
-
-
-<app-entry-page></app-entry-page>
+  <router-outlet></router-outlet>
   </div>
 
   
