--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<div id= "fullPage"style="text-align: center">
-  <router-outlet></router-outlet>
-  </div>
+<div id= "fullPage"style="text-align: center" >
+  <app-nav-bar *ngIf="isNotLandingPage()"></app-nav-bar>
+  <div [@triggerName]="prepareRoute(outlet)">
+    <router-outlet #outlet="outlet"></router-outlet>
+  </div>  
+</div>
 
   
