--- a/src/app/entry-page/entry-page.component.css
+++ b/src/app/entry-page/entry-page.component.css
@@ -77,7 +77,6 @@ h2{
     color:rgba(45, 45, 45, 1);
 
 
-
 }#pageJump i:hover{
 
     
@@ -85,7 +84,9 @@ h2{
 
 color:#FDCB01;
 }
-
+.material-icons:focus {
+    outline: 0;
+  }
 
 
 @keyframes flicker {
