--- a/src/app/entry-page/entry-page.component.html
+++ b/src/app/entry-page/entry-page.component.html
@@ -1,4 +1,4 @@
-
+<div id="entry-background-img">
 <div id="title" >
 <h1>
     <h1 *ngIf="!isVisible"data-heading="E">ROBERT</h1>
@@ -15,7 +15,8 @@
     <i (mouseenter)="mouseHover($event)" 
     data-arrow  class="material-icons" routerLink="/home" routerLinkActive="active">
     
-        arrow_drop_down
+    arrow_forward
         </i>
     </div>
     </div>
+  </div>
