--- a/src/app/entry-page/entry-page.component.css
+++ b/src/app/entry-page/entry-page.component.css
@@ -1,4 +1,13 @@
-
+/* #entry-background-img{
+    background-image: url("src\assets\img\websiteBackground.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
+    position: relative;
+} */
  p{
     content: attr(data-subheading);
     position: absolute;
@@ -6,10 +15,11 @@
     z-index: 5;
     text-shadow: none;
     font-size: 2vw;
-    left: 41.2vw;
     top:47.5vh;
-    text-align: left;
+    text-align: center;
     animation: flicker-sub 10s linear infinite;
+    width: 100vw;
+
  }
  html, body {
     background: linear-gradient(45deg, rgba(45, 45, 45, 1) 9%, rgba(0, 0, 0, 1) 100%);
@@ -71,7 +81,8 @@ h2{
 
 #pageJump{
     padding-top:24vh;
-    width: 100%;
+    transform: translate(0%, 0%);
+    width: 100vw;
     transform: scale(3.5);
     opacity: 0.99;
     color:rgba(45, 45, 45, 1);
